fix filter visibility items

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -44,14 +44,41 @@ select{
     color: #000;
 }
 
+
+.wrap {
+    width: 100%;
+    margin: 0 auto;
+    overflow: auto;
+
+}
+
+.carousel {
+    display: flex;
+    left: -100%;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: relative;
+    transform: translateX(100%);
+}
+
+.carousel-seat {
+    width: 60%;
+    background: #ddd;
+    flex: 0 0 30em;
+    /*order: 2;*/
+    margin:10px;
+}
+
+
 .glide h1 {
     font-size: 1.2em;
 }
 
-.glide li{
-    /*background-color: #17141d;*/
-    overflow: hidden;
-}
+/*.glide li{*/
+    /*!*background-color: #17141d;*!*/
+    /*overflow: hidden;*/
+/*}*/
 
 .imageHolder{
     width: 100%;
@@ -59,7 +86,7 @@ select{
     background-color: red;
 }
 
-.glide img{
+.carousel-seat img{
     width: 100%;
     height: 30rem;
     object-fit: cover;
